--- a/missingkids/less/custom-css.less
+++ b/missingkids/less/custom-css.less
@@ -593,6 +593,10 @@ textarea.form-control {
 
 .textColorLightBlue{
     color: @blue-lighter;
+    &:hover, &:focus, &:visited, &:active {
+        color: @blue-lighter;
+        text-decoration: underline; 
+    }
 }
 
 .textarea{
